--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 python = "^3.9"
 httpx = "0.23.3"
 jinja2 = "3.1.2"
-jsonschema = "4.17.3"
+fastjsonschema = "2.19.1"
 orjson = "3.8.9"
 pydantic = "1.10.7"
 pyjwt = "2.7.0"
