--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,13 @@
 [tool.poetry]
 name = "amebo"
-version = "0.3.0"
+version = "0.3.6"
 description = "HTTP Event Notifications Server - Asynchronous Communication Engine"
 authors = ["Tersoo"]
 license = "MIT"
 readme = "README.md"
+packages = [
+    {include = "amebo"},
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -12,7 +15,7 @@ httpx = "0.23.3"
 jinja2 = "3.1.2"
 fastjsonschema = "2.19.1"
 orjson = "3.8.9"
-pydantic = "1.10.7"
+pydantic = "2.7.1"
 pyjwt = "2.7.0"
 uvicorn = "0.14.0"
 routerling = "0.5.1"
@@ -22,4 +25,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-amebo = "amebo.cli:execute"
+amebo = "amebo:execute"
