--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "amebo"
-version = "0.3.6"
+version = "0.5.2"
 description = "HTTP Event Notifications Server - Asynchronous Communication Engine"
 authors = ["Tersoo"]
 license = "MIT"
@@ -10,15 +10,18 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-httpx = "0.23.3"
-jinja2 = "3.1.2"
-fastjsonschema = "2.19.1"
-orjson = "3.8.9"
-pydantic = "2.7.1"
-pyjwt = "2.7.0"
-uvicorn = "0.14.0"
-routerling = "0.5.1"
+asyncpg = "^0"
+python = "^3"
+httpx = "^0"
+jinja2 = "^3"
+fastjsonschema = "^2.19.1"
+orjson = "^3"
+pydantic = "^2"
+pyjwt = "^2"
+uvicorn = "^0"
+heaven = "^0"
+python-dotenv = "^1"
+redis = "^5"
 
 [build-system]
 requires = ["poetry-core"]
