changes to amebo for production readiness

--- a/amebo/amebo.env
+++ b/amebo/amebo.env
@@ -1,15 +1,8 @@
 ENVELOPE_SIZE=256
 
-ADMINISTRATOR_USERNAME=administrator
-ADMINISTRATOR_PASSWORD=4ajAIDJAKjkejaZQ3KAadjajgwadjivcmz3@$SAEadaqpMCNcomAQTZZZXFVBMm
-AMEBO_DATABASE=postgres
-AMEBO_DSN=postgres://postgres:eldorad0@localhost:5432/organiser
+AMEBO_ADMIN_USERNAME=administrator
+AMEBO_ADMIN_PASSWORD=4ajAIDJAKjkejaZQ3KAadjajgwadjivcmz3@$SAEadaqpMCNcomAQTZZZXFVBMm
+AMEBO_ENGINE=postgres
+AMEBO_DSN=postgres://amebo:eldorad0@localhost:5432/amebo
+AMEBO_SECRET_KEY=9ad35404a28e59759bdd484bb81c0755
 
-SECRET_KEY=abcdefgh
-STORAGE_ENGINE=redis
-STORAGE_HOST=localhost
-STORAGE_PASSWORD=
-STORAGE_PORT=3000
-STORAGE_USERNAME=storage-username
-
-WASHIKA_STORE=sqlite
