fix: pg errors with amebo

--- a/amebo/amebo.env
+++ b/amebo/amebo.env
@@ -2,7 +2,10 @@ ENVELOPE_SIZE=256
 
 AMEBO_ADMIN_USERNAME=administrator
 AMEBO_ADMIN_PASSWORD=4ajAIDJAKjkejaZQ3KAadjajgwadjivcmz3@$SAEadaqpMCNcomAQTZZZXFVBMm
-AMEBO_ENGINE=postgres
-AMEBO_DSN=postgres://amebo:eldorad0@localhost:5432/amebo
 AMEBO_SECRET_KEY=9ad35404a28e59759bdd484bb81c0755
+
+AMEBO_ENGINE=postgres
+AMEBO_ENGINE_DSN=postgres://amebo:eldorad0@localhost:5432/amebo
+
+AMEBO_QUEUE=kafka
 
