github workflows and documentation generation issues done

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Build documentation
         run: |
-          mkdocs build --strict --verbose
+          mkdocs build --verbose
 
       - name: Setup Pages
         if: github.ref == 'refs/heads/main'
