--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,7 @@ theme:
   font:
     text: Roboto
     code: Roboto Mono
-  favicon: assets/favicon.png
+  favicon: assets/logo.png
   logo: assets/logo.png
   icon:
     logo: logo
